# validator-local-preflight-cli

./: POSTFIAT_SCHEMA.md  README.md  pyproject.toml
artifacts/: real-run-terminal-output.txt
examples/: failing-report.json  passing-report.json
src/validator_preflight/: checks.py  cli.py
tests/: test_cli.py
